--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <main>
         <section id="login">
             <div id="imagem">
-
+                
             </div>
             
             <div id="formulario">
                 <h1>Tela de Login</h1>
-                <p>Seja Bem-Vindo (a) novamente. Faça login na sua conta e acesse as configurações.</p>
+                <p>Seja Bem-vindo(a) novamente. Faça login na sua conta e acesse as configurações.</p>
                 <form action="login.php" method="post"></form>
             </div>
         </section>
